<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/TeamDataLayout">

                <TextView
                    style="@style/TeamName"
                    android:text="@string/team_a_name" />

                <TextView
                    android:id="@+id/tv_team_a_score"
                    style="@style/ScoreText"/>

                <Button
                    android:id="@+id/b_touchdown_team_a"
                    style="@style/PointButton"
                    android:text="@string/touchdown"
                    android:onClick="onClickTouchdown"/>

                <Button
                    android:id="@+id/b_point_after_touchdown_team_a"
                    style="@style/PointButton"
                    android:text="@string/point_after_touchdown"
                    android:onClick="onClickPointAfterTouchdown"/>

                <Button
                    android:id="@+id/b_field_goal_team_a"
                    style="@style/PointButton"
                    android:text="@string/field_goal"
                    android:onClick="onClickFieldGoal"/>

                <Button
                    android:id="@+id/b_safety_team_a"
                    style="@style/PointButton"
                    android:text="@string/safety"
                    android:onClick="onClickSafety"/>

                <Button
                    android:id="@+id/b_two_point_conversion_team_a"
                    style="@style/PointButton"
                    android:text="@string/two_point_conversion"
                    android:onClick="onClickTwoPointConversion"/>


            </LinearLayout>

            <View
                style="@style/SeparatedLine"/>

            <LinearLayout
                style="@style/TeamDataLayout">

                <TextView
                    style="@style/TeamName"
                    android:text="@string/team_b_name" />

                <TextView
                    android:id="@+id/tv_team_b_score"
                    style="@style/ScoreText"/>

                <Button
                    android:id="@+id/b_touchdown_team_b"
                    style="@style/PointButton"
                    android:text="@string/touchdown"
                    android:onClick="onClickTouchdown"/>

                <Button
                    android:id="@+id/b_point_after_touchdown_team_b"
                    style="@style/PointButton"
                    android:text="@string/point_after_touchdown"
                    android:onClick="onClickPointAfterTouchdown"/>

                <Button
                    android:id="@+id/b_field_goal_team_b"
                    style="@style/PointButton"
                    android:text="@string/field_goal"
                    android:onClick="onClickFieldGoal"/>

                <Button
                    android:id="@+id/b_safety_team_b"
                    style="@style/PointButton"
                    android:text="@string/safety"
                    android:onClick="onClickSafety"/>

                <Button
                    android:id="@+id/b_two_point_conversion_team_b"
                    style="@style/PointButton"
                    android:text="@string/two_point_conversion"
                    android:onClick="onClickTwoPointConversion"/>

            </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        style="@style/ResetButton"
        android:text="@string/new_game"
        android:onClick="onClickResetScores"/>

    </LinearLayout>

</ScrollView>
